Fix section heading spacing

--- a/sass/includes/_section-separator.scss
+++ b/sass/includes/_section-separator.scss
@@ -1,10 +1,10 @@
 .section-separator {
-
+  
   &__heading {
     font-size: 2.5rem;
     font-weight: 500;
     color: $color__dark;
-    margin: 2rem auto 1rem auto;
+    padding-top: 2rem;
     display: inline-block;
   }
 }
